clusters/on-prem-k3s-cluster/apps/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: longhorn.local.alexdevops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn
            port:
              number: 80
